# PixelPerfect

./: .gitignore  CMakeLists.txt
headers/: inputManager.h  player.h  timeManager.h
resources/: Kyrrin.aseprite
src/: inputManager.cpp  main.cpp  player.cpp  timeManager.cpp
